<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="15dp"
        tools:context=".ui.user.RegisterActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/register_imgview_select_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/register_btn_select_photo"
            app:layout_constraintEnd_toEndOf="@+id/register_btn_select_photo"
            app:layout_constraintStart_toStartOf="@+id/register_btn_select_photo"
            app:layout_constraintTop_toTopOf="@+id/register_btn_select_photo" />

        <Button
            android:id="@+id/register_btn_select_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/rounded_btn_select_photo"
            android:text="@string/register_txt_select_photo"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_txt_username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/usernameHint"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_btn_select_photo"
            android:autofillHints="" />

        <EditText
            android:id="@+id/register_txt_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/register_txt_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_txt_username"
            app:layout_constraintTop_toBottomOf="@+id/register_txt_username"
            android:autofillHints="" />

        <EditText
            android:id="@+id/register_txt_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/register_txt_email"
            app:layout_constraintStart_toStartOf="@+id/register_txt_email"
            app:layout_constraintTop_toBottomOf="@+id/register_txt_email"
            android:autofillHints="" />

        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_btn_accent"
            android:text="@string/registerBtn"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/register_txt_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_txt_password"
            app:layout_constraintTop_toBottomOf="@+id/register_txt_password" />

        <TextView
            android:id="@+id/register_txt_already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/alreadyRegisteredMessage"
            android:textColor="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/register_btn_register"
            app:layout_constraintStart_toStartOf="@+id/register_btn_register"
            app:layout_constraintTop_toBottomOf="@+id/register_btn_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>