<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/latest_messages_row_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_avatar" />

    <TextView
        android:id="@+id/latest_messages_row_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/latest_messages_row_username_placeholder"
        app:layout_constraintStart_toEndOf="@+id/latest_messages_row_image"
        app:layout_constraintTop_toTopOf="@+id/latest_messages_row_image" />

    <TextView
        android:id="@+id/latest_messages_row_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextDark"
        android:text="@string/latest_messages_row_message_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/latest_messages_row_username"
        app:layout_constraintTop_toBottomOf="@+id/latest_messages_row_username" />

    <TextView
        android:id="@+id/latest_messages_row_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/latest_messages_row_date_placeholder"
        android:textColor="@color/colorTextDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/latest_messages_row_username" />
</androidx.constraintlayout.widget.ConstraintLayout>