<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.chat.ChatLogActivity">

    <EditText
        android:id="@+id/chat_log_txt_message"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/chat_log_enter_message_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chat_log_btn_send"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/chat_log_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_btn_accent"
        android:textStyle="bold"
        android:text="@string/chat_log_send_btn"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_log_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/chat_log_txt_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chat_log_txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/chat_log_username_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/chat_log_imgview_image"
            app:layout_constraintTop_toTopOf="@+id/chat_log_imgview_image" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_log_imgview_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/chat_log_btn_back"
            app:layout_constraintStart_toEndOf="@+id/chat_log_btn_back"
            app:layout_constraintTop_toTopOf="@+id/chat_log_btn_back" />

        <Button
            android:id="@+id/chat_log_btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_arrow_back_white_32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chat_log_txt_user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/chat_log_imgview_image"
            app:layout_constraintStart_toStartOf="@+id/chat_log_txt_username" />

        <TextView
            android:id="@+id/chat_log_txt_user_typing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/chat_log_typing_text"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/chat_log_imgview_image"
            app:layout_constraintStart_toStartOf="@+id/chat_log_txt_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>