<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="15dp"
        tools:context=".ui.user.ProfileActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_imgview_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profile_image_description"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_avatar" />

        <View
            android:id="@+id/profile_divider_1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_imgview_image" />

        <View
            android:id="@+id/profile_divider_2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt_bio" />

        <View
            android:id="@+id/profile_divider_2_own"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt_bio_own" />

        <TextView
            android:id="@+id/profile_txt_bio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:labelFor="@id/profile_txt_bio_own"
            android:text="@string/profile_bio_title"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_divider_1" />

        <TextView
            android:id="@+id/profile_txt_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorTextDark"
            app:layout_constraintStart_toStartOf="@+id/profile_txt_bio_title"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt_bio_title" />

        <TextView
            android:id="@+id/profile_txt_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/profile_email_title"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_divider_2_own" />

        <Button
            android:id="@+id/profile_btn_save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_btn_accent"
            android:text="@string/profile_btn_save"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt_email_own" />

        <Button
            android:id="@+id/profile_btn_block_unblock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_btn_accent"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt_bio" />

        <EditText
            android:id="@+id/profile_txt_bio_own"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@color/colorPrimary"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="30"
            android:maxLines="5"
            android:textColor="@color/colorTextDark"
            app:layout_constraintStart_toStartOf="@+id/profile_txt_bio_title"
            app:layout_constraintTop_toBottomOf="@+id/profile_txt_bio_title" />

        <Button
            android:id="@+id/profile_btn_remove_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:background="@android:drawable/ic_delete"
            app:layout_constraintStart_toEndOf="@+id/profile_imgview_image"
            app:layout_constraintTop_toTopOf="@+id/profile_imgview_image" />

        <TextView
            android:id="@+id/profile_txt_email_own"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/colorTextDark"
            app:layout_constraintStart_toEndOf="@+id/profile_txt_email_title"
            app:layout_constraintTop_toTopOf="@+id/profile_txt_email_title" />

        <Button
            android:id="@+id/profile_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="Photo"
            app:layout_constraintBottom_toTopOf="@+id/profile_divider_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/profile_imgview_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
